<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Title Strings-->
    <string name="app_name">Brainmark</string>
    <string name="library">Library</string>
    <string name="favorites">Favorites</string>
    <string name="cloud">Cloud</string>
    <string name="pink">Pink</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="purple">Purple</string>
    <string name="image">Image</string>
    <string name="photo_viewer">Image Viewer</string>
    <string name="category">Categories</string>

    <!--Action Strings. Also used as activity titles-->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add Note</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_email">Send Email</string>
    <string name="action_open_drawer">Open Drawer</string>

    <!--XML Note Edit Strings-->
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="search_hint">Search title or content</string>
    <string name="image_description"> </string>

    <!--Alert Dialog Strings-->
    <string name="note">Note</string>
    <string name="caution">Caution</string>
    <string name="error">Error</string>
    <string name="confirm">Confirm</string>
    <string name="got_it">Got it</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="send_mail">Send mail…</string>
    <string name="saved">Saving…</string>
    <string name="deleted">Deleting…</string>

    <!--Note Related Strings-->
    <string name="today">"Today, "</string>
    <string name="last_edited">"Last edited    "</string>
    <string name="created_at">"Created at    "</string>

    <!--Toast and Dialog content Strings-->
    <string name="wrong_password">Wrong password</string>
    <string name="ask_delete_empty">No notes are selected</string>
    <string name="ask_delete">Delete this note?</string>
    <string name="ask_delete_multiple">Delete these notes?</string>
    <string name="long_title">Title is too long: maximum 255 characters</string>
    <string name="empty_title">Please enter a title</string>
    <string name="existing_title">Title is already in use</string>
    <string name="invalid_title">Please choose a different title</string>
    <string name="no_color_type">Error: failed to receive category type</string>
    <string name="backup_fail">Failed to back up some files:\n</string>
    <string name="previous_save">Please wait. Saving previous edit.</string>
    <string name="empty_photo">Could not find the image</string>
    <string name="no_photo_attachable">Images cannot be sent for security reasons. Still send note?</string>

    <!--Exceptions strings.-->
    <string name="parse_failed">"Backup failed: "</string>
    <string name="backup_error">"Backup process: "</string>
    <string name="saving_file_fail">"Saving file: "</string>
    <string name="image_lookup_fail">"Image query: "</string>
    <string name="content_storage_fail">"Content storage: "</string>

    <!--Settings Titles-->
    <string name="settings_security">Security</string>
    <string name="settings_password">Password Protection</string>
    <string name="settings_parse">Cloud Backup</string>
    <string name="settings_restore">Restore Backup</string>
    <string name="settings_combine">Combine Alert</string>
    <string name="settings_delete">Delete Alert</string>
    <string name="settings_font">Style</string>

    <!--Long Settings strings-->
    <string name="settings_password_detail">Encrypt your app and prevent access from other people while your phone is unlocked</string>
    <string name="settings_password_ask">This will programmatically protect your data, but we recommend keeping copies of all personal information separately.</string>
    <string name="settings_password_set">Enter new password</string>
    <string name="settings_password_reset">Re-enter password</string>
    <string name="do_not_match">Passwords do not match.</string>
    <string name="settings_password_decrypt">Enter password</string>
    <string name="settings_parse_detail">Ink will perform device-specific back up of notes to cloud every time the user opens the app. Image headers will not be backed up.</string>
    <string name="settings_parse_backing_up">Backup in process. Please wait.</string>
    <string name="settings_parse_restore">This will delete and replace all notes with backup.</string>
    <string name="settings_parse_restoring">Restoring data: Do not close the application</string>
    <string name="settings_parse_successful">Restore finished</string>
    <string name="settings_parse_failed">Error: Failed to retrieve data from cloud. Do not leave settings and try again.</string>
    <string name="settings_combine_detail">Ask the user before combining notes</string>
    <string name="settings_delete_detail">Ask the user before deleting notes</string>
    <string name="settings_serif">Serif</string>
    <string name="settings_columns">Number of notes per row</string>
    <string name="settings_holder_type">Note layout</string>
    <string name="settings_apply_layout_change_title">Apply Changes</string>
    <string name="settings_apply_layout_change">To apply layout changes, restart the app.</string>
</resources>
